--- a/spectrum/mainwindow.ui
+++ b/spectrum/mainwindow.ui
@@ -22,6 +22,9 @@
     <height>800</height>
    </size>
   </property>
+  <property name="cursor">
+   <cursorShape>ArrowCursor</cursorShape>
+  </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
